test : PreQuestionGptCoachTest 커밋 충돌 오류 수정